Replace DRW references with HFT across lab scripts and runbooks; update README
- Replace com.drw.trading with com.hft.trading in lab_java.py, java.md, python.md
- Replace drw-market-data and drw-internal-data with hft-* in lab_aws.py and aws.md
- Update README to reflect all 13 lab categories, new runbooks section, Kubernetes
  and Java command references, and expanded interview tips

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>